--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -332,5 +332,10 @@
 
     <!-- Screen brightness when dozing. -->
     <integer name="config_screenBrightnessDoze">25</integer>
+
+    <!-- Default values for display color temperature -->
+    <integer name="config_dayColorTemperature">7000</integer>
+    <integer name="config_nightColorTemperature">4000</integer>
+
 </resources>
 
