--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -324,4 +324,13 @@
     <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
     <bool name="config_dozeAfterScreenOff">true</bool>
     <bool name="config_powerDecoupleInteractiveModeFromDisplay">true</bool>
+
+     <string-array name="config_locationProviderPackageNames" translatable="false">
+         <!-- The Google provider -->
+         <item>com.google.android.gms</item>
+    </string-array>
+
+    <!-- Screen brightness when dozing. -->
+    <integer name="config_screenBrightnessDoze">25</integer>
 </resources>
+
